[package]
name = "xsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.17.0"
egui_extras = {path = "../Public/egui/egui_extras", version = "0.17.0", features = ["image"]}
image = { version = "0.24", features = ["jpeg", "png"] }
reqwest_cookie_store = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
cookie_store = "0.15"
tokio = { version = "1", features = ["full"] }

[features]

[patch.crates-io]
# If you fork https://github.com/emilk/egui you can test with:
eframe = { path = "../Public/egui/eframe" }
